fix css on safari

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@ a {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
+body {
+    -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+}
+
 body::-webkit-scrollbar {
     width: 8px;
 }
